2009-10-18  Joe Mistachkin  <joe@mistachkin.com>

	* tests/thread.test (thread-4.[345]): [Bug 1565466]: Correct tests to
	save their error state before the final call to threadReap just in case
	it triggers an "invalid thread id" error.  This error can occur if one
	or more of the target threads has exited prior to the attempt to send
	it an asynchronous exit command.

	* doc/memory.n: [Bug 988703]: Add mechanism for discovering what Tcl_Objs
	* generic/tclCkalloc.c (MemoryCmd): are allocated when built for memory
	* generic/tclInt.decls: debugging.  This was previously backported from
	* generic/tclInt.h: Tcl 8.6 with the corrections to fix [Bug 2871908].
	* generic/tclObj.c (ObjData, TclFinalizeThreadObjects): However, there
	were key elements missing.  These changes make things consistent between
	branches.

2009-10-17  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclVar.c (TclDeleteCompiledLocalVars, UnsetVarStruct)
	(TclDeleteNamespaceVars): 
	* generic/tclTrace.c (Tcl_UntraceVar2): [Bug 2629338]: Stop traces
	that are deleted part way through (a feature used by tdom) from
	causing freed memory to be accessed.

2009-10-08  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclDictObj.c (DictIncrCmd): [Bug 2874678]: Don't leak any
	bignums when doing [dict incr] with a value.
	* tests/dict.test (dict-19.3): Memory leak detection code.

2009-10-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclObj.c: [Bug 2871908]: Plug memory leaks of the
	objThreadMap and lineCLPtr hashtables.  Also make the names of the
	continuation line information initialization and finalization
	functions more consistent. Patch supplied by Joe Mistachkin
	<joe@mistachkin.com>.

	* generic/tclIORChan.c (ErrnoReturn): Replace the hardwired constant
	11 with the proper errno define, EAGAIN. What was I thinking? The
	BSD's have a different errno assignment and break with the hardwired
	number. Reported by emiliano on the chat.
